<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
       xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:layout_margin="2dp">
    
    <LinearLayout 
            android:layout_width="match_parent" 
            android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


            <TextView
                    android:id="@+id/tid2"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:hint="ID: "
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/tNombre"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.041"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.29"/>

            <TextView
                    android:id="@+id/tid"
                    android:layout_width="wrap_content"
                    android:layout_height="22dp"
                    android:text="@string/id"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@+id/tNombre"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.156"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.29"/>


            <TextView
                    android:id="@+id/tNombre"
                    android:layout_width="wrap_content"
                    android:layout_height="62dp"
                    android:gravity="center"
                    android:text="@string/nombre"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.068"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"/>

            <TextView
                    android:id="@+id/tNombre2"
                    android:layout_width="115dp"
                    android:layout_height="23dp"
                    android:gravity="center"
                    android:hint="Nombre: "
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.336"/>

            <TextView
                    android:id="@+id/tPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="62dp"
                    android:gravity="center"
                    android:text="@string/Precio"
                    android:textColor="@android:color/black"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.894"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.452" />

            <TextView
                    android:id="@+id/tStock"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:gravity="end"
                    android:text="@string/Stock"
                    android:textColor="@android:color/black"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.954"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tPrecio"
                    app:layout_constraintVertical_bias="0.0" />

            <TextView
                    android:id="@+id/tStock2"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:gravity="end"
                    android:hint="@string/Cantidad"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.77"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tPrecio"
                    app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>